Optimize: Switch to static data fetching at build time
- Add fetchStaticData.js script to fetch TFT data from Community Dragon
- Update build command to fetch data before building
- App now loads from bundled /tft-data.json instead of external API
- Better performance: no external API calls for users

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ dist-ssr
 # Debug/inspection data files (fetched from Community Dragon)
 /data/
 
+# Static TFT data (generated at build time)
+public/tft-data.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
