--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "fetch-data": "node scripts/fetchStaticData.js",
+    "build": "npm run fetch-data && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
